Fixed sidebar spacing.

--- a/public/stylesheets/thought_lead.css
+++ b/public/stylesheets/thought_lead.css
@@ -93,7 +93,8 @@ a.action:hover, a.action:focus {background:#b2cd1e; color:#fff;}
 	
 	/* SECONDARY */
 	#content #secondary {position:relative; float:right; margin-right:10px; padding:30px 20px 30px 10px; overflow:hidden; width:320px;}
-	#secondary div {padding-bottom:40px;}
+	#secondary div {padding-bottom:20px;}
+	#secondary ul div, #secondary ol div {padding-bottom:0;}
 	
 	/* Small */
 	#small {position:relative; width:430px; padding:50px 0px 150px; margin:0 auto; background:#fff; text-align:left;}
@@ -131,10 +132,11 @@ div.chapter {text-transform:uppercase; border-bottom:1px solid #e5e5e5; color:#8
 #lesson_placeholder #primary div.lesson_info {margin-bottom:20px; border-bottom:1px dashed #bbb;}
 #secondary a.action {margin: 0 0 20px !important;}
 #secondary .course {font: normal normal normal 16px/20px arial, sans-serif;}
-#secondary .course .course_title p {font: normal normal normal 16px/20px arial, sans-serif; padding-bottom:10px; margin-bottom:10px; border-bottom:1px solid #e5e5e5;}
+#secondary .course .course_title p {font: normal normal normal 16px/20px arial, sans-serif; padding-bottom:10px; margin-bottom:0px; border-bottom:1px solid #e5e5e5;}
 #secondary .course_title span {display:block; text-transform:uppercase; margin-bottom:5px; font: normal normal normal 14px/20px arial, sans-serif; color:#aaa;}
-#secondary .course .lessons {margin-bottom:20px;}
+#secondary .course .lessons {margin-bottom:0px;}
 #secondary .course .lessons li {font: normal normal normal 15px/20px arial, sans-serif; padding-bottom:5px; margin:0 0 5px 15px; border-bottom:1px solid #e5e5e5;}
+#content #secondary ul, #content #secondary ol {padding:0; margin:0;}
 
 
 /*	DISCUSSIONS --------------- */
